----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-01-01 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/german*: Updated.

2003-01-01 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/czech*: Updated.
    * lang/italian-*.inc.php3: Updates, thanks again to Pietro Danesi (danone).

2002-12-28 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/ukrainian: update, thanks to Markijan Baran
    * user_details.php3: add $strGrantOption
    * lang/french update
    * main.php3, lang/*.php3: $strOriginalInterface

2002-12-25 Alexander M. Turek  <rabus@users.sourceforge.net>
    * server_privileges.php3:
      - Made the script compatible to MySQL < 3.22.11;
      - Fixed the missing "LOCK TABLES" option in the privilege editor.
      - Fixed a bug that caused the script not to use GRANT ALL PRIVILEGES even
        if all privileges have been selected.
    * libraries/sqlparser.data.php3:
      - Fixed bug #655817 (New privileges are not detected correctly).
      - Updated function list.

2002-12-23 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/italian-*.inc.php3: Updates, thanks again to Pietro Danesi (danone).

2002-12-22 Alexander M. Turek  <rabus@users.sourceforge.net>
    * server_privileges.php3, lang/*.inc.php3, libraries/user_details.js:
      Added ability to delete users.

2002-12-21 Alexander M. Turek  <rabus@users.sourceforge.net>
    * tbl_dump.php3:
      - Fixed wrong charset information in XML exports.
      - Beautified the output of the MySQL version number, e.g. '4.0.5' instead
        of '4.00.05'.

2002-12-20 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/italian-*.inc.php3: Updates, thanks again to Pietro Danesi (danone).

2002-12-19 Michal Cihar  <nijel@users.sourceforge.net>
    * server_privileges.php3: Fixed undefined variable warning.
    * lang/czech*: Updated.
    * lang/*: Fixed a typo.

2002-12-19 Marc Delisle  <lem9@users.sourceforge.net>