@@ -11,6 +11,8 @@ $Source$
 2003-01-01 Michal Cihar  <nijel@users.sourceforge.net>
     * lang/czech*: Updated.
     * lang/italian-*.inc.php3: Updates, thanks again to Pietro Danesi (danone).
+    * lang/sort_lang.sh: Made POSIX sh compatible.
+    * lang/check_lang.sh: Made require bash.
 
 2002-12-28 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/ukrainian: update, thanks to Markijan Baran
